--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   </div>
 
   <script>
-    const allowedLat = 12.779656;  // พิกัดที่อนุญาต
-    const allowedLng = 101.728470;
+    const allowedLat = 12.8001238;  // พิกัดที่อนุญาต
+    const allowedLng = 101.6546914;
     const radiusMeters = 100;
     const scriptURL = "https://script.google.com/macros/s/AKfycbwkXRTWzJcZz70nfLB03_6kdIceamD9BD9D6g4d3vajOL0699wHGgbixVizpYnwhwl1/exec";
 
