--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <title>เช็คชื่อด้วย GPS</title>
+  <title>เช็คชื่อเข้าสีด้วย ระบบ GPS ระบุตำแหน่ง</title>
   <style>
     body { font-family: sans-serif; padding: 2rem; }
     #form-area { display: none; margin-top: 1rem; }
