--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-  <h2>ระบบเช็คชื่อด้วยตำแหน่ง</h2>
+  <h2>เช็คชื่อเข้าสีด้วย ระบบ GPS ระบุตำแหน่ง</h2>
   <p id="status-msg">กำลังตรวจสอบตำแหน่งของคุณ...</p>
   <div id="deny-msg">คุณไม่ได้อยู่ในพื้นที่ที่อนุญาตให้เช็คชื่อ</div>
 
