--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     }, () => {
       document.getElementById("status-msg").style.display = "none";
       const denyMsg = document.getElementById("deny-msg");
-      denyMsg.innerText = "ไม่สามารถดึงตำแหน่งได้ กรุณาเปิด GPS";
+      denyMsg.innerText = "ไม่สามารถดึงตำแหน่งได้ กรุณาเปิด GPS และกดอนุญาต หากใช้ Iphone ให้ไปตั้งใน setting ";
       denyMsg.style.display = "block";
     });
 
