--- a/index.html
+++ b/index.html
@@ -2,11 +2,51 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <title>เช็คชื่อด้วย GPS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>เช็คชื่อเข้าสีด้วย ระบบ GPS ระบุตำแหน่ง</title>
   <style>
     body {
       font-family: sans-serif;
-      padding: 2rem;
+      padding: 1rem;
+      margin: 0;
+      max-width: 600px;
+      margin: auto;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      text-align: center;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    label {
+      display: flex;
+      flex-direction: column;
+      font-size: 1rem;
+    }
+
+    input {
+      padding: 0.5rem;
+      font-size: 1rem;
+    }
+
+    button {
+      padding: 0.75rem;
+      font-size: 1rem;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #45a049;
     }
 
     #form-area {
@@ -17,23 +57,28 @@
     #deny-msg {
       color: red;
       display: none;
+      text-align: center;
     }
 
     #submit-msg {
+      text-align: center;
       margin-top: 1rem;
-      font-weight: bold;
+    }
+
+    #loading-spinner {
+      display: none;
+      text-align: center;
+      margin-top: 1rem;
     }
 
     .spinner {
-      display: inline-block;
-      width: 20px;
-      height: 20px;
-      border: 3px solid #ccc;
-      border-top: 3px solid #333;
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #4CAF50;
       border-radius: 50%;
+      width: 30px;
+      height: 30px;
       animation: spin 1s linear infinite;
-      vertical-align: middle;
-      margin-left: 8px;
+      margin: auto;
     }
 
     @keyframes spin {
@@ -43,23 +88,32 @@
   </style>
 </head>
 <body>
-  <h2>ระบบเช็คชื่อด้วยตำแหน่ง</h2>
+  <h2>เช็คชื่อเข้าสีด้วย ระบบ GPS ระบุตำแหน่ง</h2>
   <p id="status-msg">กำลังตรวจสอบตำแหน่งของคุณ...</p>
   <div id="deny-msg">คุณไม่ได้อยู่ในพื้นที่ที่อนุญาตให้เช็คชื่อ</div>
 
   <div id="form-area">
     <form id="checkin-form">
-      <label>ชื่อ-นามสกุล: <input type="text" name="name" required></label><br><br>
-      <label>รหัสนักเรียน: <input type="text" name="id" required></label><br><br>
-      <button type="submit" id="submit-btn">ส่งข้อมูล</button>
+      <label>
+        ชื่อ-นามสกุล:
+        <input type="text" name="name" required>
+      </label>
+      <label>
+        รหัส:
+        <input type="text" name="id" required>
+      </label>
+      <button type="submit">ส่งข้อมูล</button>
     </form>
+    <div id="loading-spinner">
+      <div class="spinner"></div>
+    </div>
     <div id="submit-msg"></div>
   </div>
 
   <script>
-    const allowedLat = 12.779656;
-    const allowedLng = 101.728470;
-    const radiusMeters = 100;
+    const allowedLat = 12.8005707;
+    const allowedLng = 101.6550749;
+    const radiusMeters = 50;
     const scriptURL = "https://script.google.com/macros/s/AKfycbwkXRTWzJcZz70nfLB03_6kdIceamD9BD9D6g4d3vajOL0699wHGgbixVizpYnwhwl1/exec";
 
     let userLat, userLng;
@@ -89,19 +143,16 @@
     }, () => {
       document.getElementById("status-msg").style.display = "none";
       const denyMsg = document.getElementById("deny-msg");
-      denyMsg.innerText = "ไม่สามารถดึงตำแหน่งได้ กรุณาเปิด GPS";
+      denyMsg.innerText = "ไม่สามารถดึงตำแหน่งได้ กรุณาเปิด GPS และกดอนุญาต หากใช้ iPhone ให้ไปตั้งใน Settings > Safari > Location";
       denyMsg.style.display = "block";
     });
 
     document.getElementById("checkin-form").addEventListener("submit", async (e) => {
       e.preventDefault();
       const form = e.target;
-      const submitBtn = document.getElementById("submit-btn");
-      const submitMsg = document.getElementById("submit-msg");
 
-      // แสดงข้อความกำลังส่ง + spinner
-      submitMsg.innerHTML = `⏳ กำลังส่งข้อมูล... <span class="spinner"></span>`;
-      submitBtn.disabled = true;
+      document.getElementById("submit-msg").innerText = "";
+      document.getElementById("loading-spinner").style.display = "block";
 
       const formData = new FormData();
       formData.append('name', form.name.value);
@@ -114,19 +165,18 @@
           method: 'POST',
           body: formData,
         });
-
+        document.getElementById("loading-spinner").style.display = "none";
         if (res.ok) {
-          submitMsg.innerText = "✅ เช็คชื่อสำเร็จ!";
+          document.getElementById("submit-msg").innerText = "✅ เช็คชื่อสำเร็จ!";
           form.reset();
         } else {
-          throw new Error('การตอบกลับไม่ถูกต้อง');
+          throw new Error('Network response was not ok');
         }
       } catch (err) {
         console.error(err);
-        submitMsg.innerText = "❌ เกิดข้อผิดพลาดในการส่งข้อมูล";
+        document.getElementById("loading-spinner").style.display = "none";
+        document.getElementById("submit-msg").innerText = "❌ เกิดข้อผิดพลาดในการส่งข้อมูล";
       }
-
-      submitBtn.disabled = false;
     });
   </script>
 </body>
