--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <input type="text" name="name" required>
       </label>
       <label>
-        รหัส:
+        รหัสนักเรียน:
         <input type="text" name="id" required>
       </label>
       <button type="submit">ส่งข้อมูล</button>
