--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     }, () => {
       document.getElementById("status-msg").style.display = "none";
       const denyMsg = document.getElementById("deny-msg");
-      denyMsg.innerText = "ไม่สามารถดึงตำแหน่งได้ กรุณาเปิด GPS และกดอนุญาต หากใช้ iPhone ให้ไปตั้งใน Settings > Safari > Location";
+      denyMsg.innerText = "ไม่สามารถดึงตำแหน่งได้ กรุณาเปิด GPS และกดอนุญาต หากใช้ iPhone ให้ไปตั้งใน Settings(การตั้งค่า) >Privacy(ความเป็นส่วนตัว) > Location (บริการหาตำแหน่งที่ตั้ง) > Safari > While using App (ในระหว่างใช้แอป)";
       denyMsg.style.display = "block";
     });
 
