--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
   </div>
 
   <script>
-    const allowedLat = 12.8006031;
-    const allowedLng = 101.6549753;
+    const allowedLat = 12.779579;
+    const allowedLng = 101.728478;
     const radiusMeters = 50;
     const scriptURL = "https://script.google.com/macros/s/AKfycbwkXRTWzJcZz70nfLB03_6kdIceamD9BD9D6g4d3vajOL0699wHGgbixVizpYnwhwl1/exec";
 
