--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <h2>เช็คชื่อเข้าสีด้วย ระบบ GPS ระบุตำแหน่ง</h2>
     <p id="status-msg">กำลังตรวจสอบตำแหน่งของคุณ...</p>
     <div id="spinner" class="spinner"></div>
-    <div id="deny-msg">คุณไม่ได้อยู่ในพื้นที่ที่อนุญาตให้เช็คชื่อ</div>
+    <div id="deny-msg">ไม่ได้รับอนุญาตให้เช็คชื่อ กรุณากลับไปที่สี</div>
 
     <div id="form-area">
       <form id="checkin-form">
