--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>เช็คชื่อเข้าสีด้วย ระบบ GPS ระบุตำแหน่ง</title>
+  <title>เช็คชื่อเข้าสี</title>
   <style>
     * {
       box-sizing: border-box;
@@ -104,15 +104,15 @@
 </head>
 <body>
   <div id="main-content">
-    <h2>เช็คชื่อเข้าสีด้วย ระบบ GPS ระบุตำแหน่ง</h2>
-    <p id="status-msg">กำลังตรวจสอบตำแหน่งของคุณ...</p>
+    <h2>เช็คชื่อเข้าสี</h2>
+    <p id="status-msg">กำลังตรวจสอบ โปรดรอสักครู่...</p>
     <div id="spinner" class="spinner"></div>
     <div id="deny-msg">ไม่ได้รับอนุญาตให้เช็คชื่อ กรุณากลับไปที่สี</div>
 
     <div id="form-area">
       <form id="checkin-form">
         <label>ชื่อ-นามสกุล:<br><input type="text" name="name" required></label><br>
-        <label>รหัสนักเรียน:<br><input type="text" name="id" required></label><br>
+        <label>รหัสนักเรียน(ไม่ต้องมี 0 หรือS ):<br><input type="text" name="id" required></label><br>
         <button type="submit">ส่งข้อมูล</button>
         <div id="submit-spinner" class="spinner"></div>
       </form>
