--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
   </div>
 
   <script>
-    const allowedLat = 12.799667;
-    const allowedLng = 101.654392;
+    const allowedLat = 12.8011978;
+    const allowedLng = 101.6549924;
     const radiusMeters = 35;
     const scriptURL = "https://script.google.com/macros/s/AKfycbwkXRTWzJcZz70nfLB03_6kdIceamD9BD9D6g4d3vajOL0699wHGgbixVizpYnwhwl1/exec";
 
@@ -196,3 +196,4 @@
   </script>
 </body>
 </html>
+
