--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
 
     body.background-active {
-      background-image: url('https://wallpapersok.com/images/high/4k-phone-background-pink-star-in-galaxy-5e8hvc6dmwajd9p8.webp');
+      background-image: url('https://github.com/ItsadaKH/Home-Checkin-2/blob/main/Pinkbackground.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -196,5 +196,6 @@
   </script>
 </body>
 </html>
+
 
 
