--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
 
     body.background-active {
-      background-image: url('https://github.com/ItsadaKH/Home-Checkin-2/blob/main/Pink230868.png?raw=true');
+      background-image: url('https://github.com/ItsadaKH/Home-Checkin-2/blob/main/Pink230868(2).png?raw=true');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -196,6 +196,7 @@
   </script>
 </body>
 </html>
+
 
 
 
