--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
   </div>
 
   <script>
-    const allowedLat = 12.8014590;
-    const allowedLng = 101.6541462;
-    const radiusMeters = 35;
+    const allowedLat = 101.6542126);
+    const allowedLng = 101.6542126;
+    const radiusMeters = 100;
     const scriptURL = "https://script.google.com/macros/s/AKfycbwkXRTWzJcZz70nfLB03_6kdIceamD9BD9D6g4d3vajOL0699wHGgbixVizpYnwhwl1/exec";
 
     let userLat, userLng;
@@ -196,6 +196,7 @@
   </script>
 </body>
 </html>
+
 
 
 
