--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 document.getElementById("spinner").style.display = "none";
                 if (retryAttempts < maxRetries) {
                     retryAttempts++;
-                    document.getElementById("status-msg").innerText = `การค้นหาล้มเหลว กำลังลองใหม่อีกครั้ง (${retryAttempts}/${maxRetries})...`;
+                    document.getElementById("status-msg").innerText = `กำลังหาตำแหน่งใหม่อีกครั้ง (${retryAttempts}/${maxRetries})...`;
                     setTimeout(checkLocation, 2000);
                 } else {
                     document.getElementById("status-msg").style.display = "none";
@@ -258,6 +258,7 @@
 </script>
 </body>
 </html>
+
 
 
 
