--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div id="form-area">
       <form id="checkin-form">
         <label>ชื่อ-นามสกุล:<br><input type="text" name="name" required></label><br>
-        <label>รหัสนักเรียน(ไม่ต้องมี 0 หรือS ):<br><input type="text" name="id" required></label><br>
+        <label>รหัสนักเรียน(ไม่ต้องมี 0 หรือS ):<br><input type="number" name="id" required></label><br>
         <button type="submit">ส่งข้อมูล</button>
         <div id="submit-spinner" class="spinner"></div>
       </form>
@@ -225,6 +225,7 @@
   </script>
 </body>
 </html>
+
 
 
 
