--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
   </div>
 
   <script>
-    const allowedLat = 12.8005917;
-    const allowedLng = 101.6548573;
-    const radiusMeters = 200;
+    const allowedLat = 12.801556;
+    const allowedLng = 101.654332;
+    const radiusMeters = 100;
     const scriptURL = "https://script.google.com/macros/s/AKfycbwkXRTWzJcZz70nfLB03_6kdIceamD9BD9D6g4d3vajOL0699wHGgbixVizpYnwhwl1/exec";
 
     let userLat, userLng;
@@ -225,6 +225,7 @@
   </script>
 </body>
 </html>
+
 
 
 
