--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
   </div>
 
   <script>
-    const allowedLat = 12.801556;
-    const allowedLng = 101.654332;
+    const allowedLat = 12.8007499;
+    const allowedLng = 101.6532292;
     const radiusMeters = 200;
     const scriptURL = "https://script.google.com/macros/s/AKfycbwkXRTWzJcZz70nfLB03_6kdIceamD9BD9D6g4d3vajOL0699wHGgbixVizpYnwhwl1/exec";
 
